--- a/backend/src/static/index.html
+++ b/backend/src/static/index.html
@@ -1,27 +1,186 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Chatbot Platform Home</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modern Landing Page</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Arial', sans-serif;
+        }
+
+        body {
+            background-color: #f8f9fa;
+        }
+
+        nav {
+            background-color: white;
+            padding: 1rem 5%;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            position: fixed;
+            width: 100%;
+        }
+
+        nav ul {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            list-style: none;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+        }
+
+        .hero {
+          height: 100vh;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          padding: 0 10%;
+          background: linear-gradient(135deg, #6366f1, #8b5cf6);
+          color: white;
+        }
+
+        .hero-content {
+            max-width: 600px;
+            margin-right: 2rem;
+        }
+
+        .hero-image {
+            max-width: 500px;
+            width: 100%;
+            height: auto;
+            animation: float 3s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-20px); }
+            100% { transform: translateY(0px); }
+        }
+        .hero-content h1 {
+            font-size: 3.5rem;
+            margin-bottom: 1.5rem;
+        }
+
+        .hero-content p {
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+            line-height: 1.6;
+        }
+
+        .cta-button {
+            padding: 1rem 2rem;
+            background-color: white;
+            color: #6366f1;
+            border: none;
+            border-radius: 5px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+
+        .cta-button:hover {
+            transform: translateY(-3px);
+        }
+
+        .features {
+            padding: 5rem 10%;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+            background-color: white;
+        }
+
+        .feature-card {
+            padding: 2rem;
+            text-align: center;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            transition: all 0.3s ease;
+            background-color: white;
+            position: relative;
+            top: 0;
+        }
+
+        .feature-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 12px 20px rgba(0,0,0,0.15);
+            background: linear-gradient(135deg, #6366f1, #8b5cf6);
+            color: white;
+        }
+
+        .feature-card:hover h3 {
+            color: white;
+        }
+
+        .feature-card:hover p {
+            color: rgba(255, 255, 255, 0.9);
+        }
+
+    </style>
 </head>
 <body>
-  <!-- Navigation Bar -->
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="login.html">Login</a></li>
-      <li><a href="profile.html">Profile</a></li>
-      <li><a href="chatbot_builder.html">Chatbot Builder</a></li>
-      <li><a href="admin.html">Admin</a></li>
-      <li><a href="dashboard.html">Dashboard</a></li>
-      <li><a href="inference.html">Test Chatbot</a></li>
-    </ul>
-  </nav>
-  <div class="container">
-    <h1>Welcome to the Chatbot Platform</h1>
-    <p>Your one-stop solution for creating, training, and managing custom chatbots.</p>
-  </div>
+    <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="register.html">Register</a></li>
+          <li><a href="login.html">Login</a></li>
+          <li><a href="profile.html">Profile</a></li>
+          <li><a href="chatbot_builder.html">Chatbot Builder</a></li>
+          <li><a href="admin.html">Admin</a></li>
+          <li><a href="dashboard.html">Dashboard</a></li>
+          <li><a href="inference.html">Test Chatbot</a></li>
+        </ul>
+    </nav>
+
+    <section class="hero" id="home">
+        <div class="hero-content">
+            <h1>Welcome to Our Website</h1>
+            <p>Create something amazing with our powerful platform. Start your journey today and discover endless possibilities.</p>
+            <a href="register.html"><button class="cta-button">Get Started</button></a>
+        </div>
+        <img src="assets/1.avif" alt="Platform illustration" class="hero-image">
+    </section>
+
+    <section class="features" id="features">
+        <div class="feature-card">
+            <h3>Easy to Use</h3>
+            <p>Simple and intuitive interface designed for the best user experience.</p>
+        </div>
+        <div class="feature-card">
+            <h3>Fast & Reliable</h3>
+            <p>Built with performance in mind to ensure smooth operation.</p>
+        </div>
+        <div class="feature-card">
+            <h3>24/7 Support</h3>
+            <p>Our dedicated team is always here to help you succeed.</p>
+        </div>
+          </section>
+
+          <section class="features" id="features-row-2">
+        <div class="feature-card">
+            <h3>Advanced Security</h3>
+            <p>Your data is protected with enterprise-grade security features.</p>
+        </div>
+        <div class="feature-card">
+            <h3>Customizable</h3>
+            <p>Tailor the platform to your specific needs with customization options.</p>
+        </div>
+        <div class="feature-card">
+            <h3>Analytics</h3>
+            <p>Gain valuable insights with our comprehensive analytics dashboard.</p>
+        </div>
+        <!-- <div class="feature-card">
+            <h3>24/7 Support</h3>
+            <p>Our dedicated team is always here to help you succeed.</p>
+        </div> -->
+    </section>
 </body>
-</html>
+</html></section>
