--- a/backend/src/static/admin.html
+++ b/backend/src/static/admin.html
@@ -3,7 +3,127 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin Panel</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Arial', sans-serif;
+    }
+
+    body {
+        background: linear-gradient(135deg, #6366f1, #8b5cf6);
+        min-height: 100vh;
+    }
+
+    nav {
+        background-color: white;
+        padding: 1rem 5%;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        position: fixed;
+        width: 100%;
+        z-index: 1000;
+    }
+
+    nav ul {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        list-style: none;
+    }
+
+    nav ul li a {
+        text-decoration: none;
+        color: #333;
+        font-weight: bold;
+        transition: color 0.3s ease;
+    }
+
+    nav ul li a:hover {
+        color: #6366f1;
+    }
+
+    .container {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        padding: 100px 20px 40px;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+
+    h1 {
+        color: white;
+        font-size: 2.5rem;
+        margin-bottom: 2rem;
+        text-align: center;
+    }
+
+    button {
+        padding: 1rem 2rem;
+        background-color: white;
+        color: #6366f1;
+        border: none;
+        border-radius: 5px;
+        font-weight: bold;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        margin-bottom: 2rem;
+        font-size: 1rem;
+        min-width: 200px;
+    }
+
+    button:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 4px 12px rgba(255, 255, 255, 0.2);
+    }
+
+    button:active {
+        transform: translateY(-1px);
+    }
+
+    pre {
+        background-color: white;
+        padding: 2rem;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        width: 100%;
+        max-width: 800px;
+        overflow-x: auto;
+        color: #333;
+        font-family: 'Courier New', monospace;
+        transition: all 0.3s ease;
+        font-size: 0.9rem;
+        line-height: 1.5;
+    }
+
+    pre:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 15px rgba(0,0,0,0.2);
+    }
+
+    @media (max-width: 768px) {
+        nav ul {
+            flex-wrap: wrap;
+            gap: 1rem;
+        }
+
+        h1 {
+            font-size: 2rem;
+        }
+
+        pre {
+            font-size: 0.8rem;
+            padding: 1rem;
+        }
+
+        .container {
+            padding: 80px 15px 30px;
+        }
+    }
+</style>
 </head>
 <body>
   <!-- Navigation Bar -->
