--- a/backend/src/static/chatbot_builder.html
+++ b/backend/src/static/chatbot_builder.html
@@ -3,13 +3,227 @@
 <head>
   <meta charset="UTF-8">
   <title>Chatbot Builder</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
   <style>
-    .container { max-width: 800px; margin: 20px auto; background: #fff; padding: 20px; border-radius: 5px; }
-    .hidden { display: none; }
-    nav ul { display: flex; list-style: none; padding: 0; }
-    nav ul li { margin: 0 10px; }
-  </style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Arial', sans-serif;
+    }
+
+    body {
+        background: linear-gradient(135deg, #6366f1, #8b5cf6);
+        min-height: 100vh;
+        color: #333;
+    }
+
+    nav {
+        background-color: white;
+        padding: 1rem 5%;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        position: fixed;
+        width: 100%;
+        z-index: 1000;
+    }
+
+    nav ul {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        list-style: none;
+    }
+
+    nav ul li a {
+        text-decoration: none;
+        color: #333;
+        font-weight: bold;
+        transition: color 0.3s ease;
+    }
+
+    nav ul li a:hover {
+        color: #6366f1;
+    }
+
+    .container {
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 100px 20px 40px;
+    }
+
+    h1, h2 {
+        color: white;
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+    }
+
+    h2 {
+        font-size: 1.8rem;
+        margin-top: 2rem;
+    }
+
+    form {
+        background: white;
+        padding: 2rem;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        margin-bottom: 2rem;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    form:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 15px rgba(0,0,0,0.2);
+    }
+
+    label {
+        display: block;
+        margin-bottom: 0.5rem;
+        color: #333;
+        font-weight: bold;
+    }
+
+    input[type="text"],
+    textarea,
+    select {
+        width: 100%;
+        padding: 0.8rem;
+        margin-bottom: 1.5rem;
+        border: 2px solid #e2e8f0;
+        border-radius: 5px;
+        font-size: 1rem;
+        transition: border-color 0.3s ease;
+    }
+
+    input[type="text"]:focus,
+    textarea:focus,
+    select:focus {
+        outline: none;
+        border-color: #6366f1;
+        box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.1);
+    }
+    input[type="file"] {
+        width: 100%;
+        margin-bottom: 1.5rem;
+    }
+
+    input[type="file"]::file-selector-button {
+        padding: 0.8rem 1.5rem;
+        background: linear-gradient(135deg, #6366f1, #8b5cf6);
+        color: white;
+        border: none;
+        border-radius: 5px;
+        font-weight: bold;
+        cursor: pointer;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        font-size: 0.9rem;
+        margin-right: 1rem;
+    }
+
+    input[type="file"]::file-selector-button:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(99, 102, 241, 0.3);
+    }
+
+    input[type="file"]::file-selector-button:active {
+        transform: translateY(0);
+    }
+
+    /* Style for the file name text */
+    input[type="file"]::-webkit-file-upload-button {
+        visibility: hidden;
+    }
+
+    input[type="file"]::before {
+        content: 'Select file';
+        display: inline-block;
+        background: linear-gradient(135deg, #6366f1, #8b5cf6);
+        color: white;
+        padding: 0.8rem 1.5rem;
+        border-radius: 5px;
+        font-weight: bold;
+        cursor: pointer;
+        transition: all 0.3s ease;
+    }
+
+    input[type="file"]:hover::before {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(99, 102, 241, 0.3);
+    }
+
+    input[type="file"]:active::before {
+        transform: translateY(0);
+    }
+
+    /* Remove margin from file input when it's the last element */
+    input[type="file"]:last-child {
+        margin-bottom: 0;
+    }
+
+    button {
+        width: 100%;
+        padding: 1rem;
+        background: linear-gradient(135deg, #6366f1, #8b5cf6);
+        color: white;
+        border: none;
+        border-radius: 5px;
+        font-weight: bold;
+        cursor: pointer;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        font-size: 1rem;
+    }
+
+    button:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(99, 102, 241, 0.3);
+    }
+
+    button:active {
+        transform: translateY(0);
+    }
+
+    pre {
+        background-color: white;
+        padding: 1.5rem;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        overflow-x: auto;
+        margin-top: 1.5rem;
+        font-family: 'Courier New', monospace;
+        font-size: 0.9rem;
+        line-height: 1.5;
+    }
+
+    .hidden {
+        display: none;
+    }
+
+    @media (max-width: 768px) {
+        nav ul {
+            flex-wrap: wrap;
+            gap: 1rem;
+        }
+
+        .container {
+            padding: 80px 15px 30px;
+        }
+
+        h1 {
+            font-size: 2rem;
+        }
+
+        h2 {
+            font-size: 1.5rem;
+        }
+
+        form {
+            padding: 1.5rem;
+        }
+    }
+</style>
 </head>
 <body>
   <nav>
@@ -21,6 +235,7 @@
       <li><a href="chatbot_builder.html">Chatbot Builder</a></li>
       <li><a href="admin.html">Admin</a></li>
       <li><a href="dashboard.html">Dashboard</a></li>
+      <li><a href="inference.html">Test Chatbot</a></li>
     </ul>
   </nav>
 
