--- a/backend/src/static/dashboard.html
+++ b/backend/src/static/dashboard.html
@@ -3,16 +3,184 @@
 <head>
   <meta charset="UTF-8">
   <title>Company Dashboard</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
   <style>
-    .dashboard-container { max-width: 800px; margin: 20px auto; padding: 20px; background: #fff; border-radius: 5px; }
-    .company-logo { max-width: 150px; }
-    .info-section { margin-bottom: 20px; }
-    .info-section h2 { border-bottom: 1px solid #ccc; padding-bottom: 5px; }
-    .edit-form label { display: block; margin-top: 10px; }
-    .edit-form input, .edit-form textarea { width: 100%; padding: 8px; margin-top: 5px; }
-    .edit-form button { margin-top: 15px; }
-  </style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Arial', sans-serif;
+    }
+
+    body {
+        background: linear-gradient(135deg, #6366f1, #8b5cf6);
+        min-height: 100vh;
+        color: #333;
+    }
+
+    nav {
+        background-color: white;
+        padding: 1rem 5%;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 1000;
+    }
+
+    nav ul {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        list-style: none;
+    }
+
+    nav ul li a {
+        text-decoration: none;
+        color: #333;
+        font-weight: bold;
+        transition: color 0.3s ease;
+    }
+
+    nav ul li a:hover {
+        color: #6366f1;
+    }
+
+    .dashboard-container {
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 6rem 2rem 2rem;
+        background: white;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        position: relative;
+    }
+
+    .dashboard-container:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 15px rgba(0,0,0,0.2);
+    }
+
+    h1, h2 {
+        color: #333;
+        margin-bottom: 1.5rem;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+        text-align: center;
+        color: #6366f1;
+    }
+
+    .info-section {
+        background: #f8f9fa;
+        padding: 1.5rem;
+        border-radius: 8px;
+        margin-bottom: 2rem;
+        transition: transform 0.3s ease;
+    }
+
+    .info-section:hover {
+        transform: translateY(-3px);
+    }
+
+    .info-section h2 {
+        color: #6366f1;
+        border-bottom: 2px solid #e2e8f0;
+        padding-bottom: 0.5rem;
+        margin-bottom: 1rem;
+    }
+
+    .company-logo {
+        max-width: 150px;
+        border-radius: 8px;
+        margin-bottom: 1rem;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+
+    .edit-form {
+        background: #f8f9fa;
+        padding: 2rem;
+        border-radius: 8px;
+        margin-top: 2rem;
+    }
+
+    .edit-form label {
+        display: block;
+        margin-bottom: 0.5rem;
+        color: #333;
+        font-weight: bold;
+    }
+
+    .edit-form input,
+    .edit-form textarea {
+        width: 100%;
+        padding: 0.8rem;
+        margin-bottom: 1.5rem;
+        border: 2px solid #e2e8f0;
+        border-radius: 5px;
+        font-size: 1rem;
+        transition: border-color 0.3s ease;
+    }
+
+    .edit-form input:focus,
+    .edit-form textarea:focus {
+        outline: none;
+        border-color: #6366f1;
+        box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.1);
+    }
+
+    .edit-form button {
+        width: 100%;
+        padding: 1rem;
+        background: linear-gradient(135deg, #6366f1, #8b5cf6);
+        color: white;
+        border: none;
+        border-radius: 5px;
+        font-weight: bold;
+        cursor: pointer;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        font-size: 1rem;
+    }
+
+    .edit-form button:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(99, 102, 241, 0.3);
+    }
+
+    pre {
+        background-color: #f8f9fa;
+        padding: 1.5rem;
+        border-radius: 8px;
+        overflow-x: auto;
+        margin-top: 1.5rem;
+        font-family: 'Courier New', monospace;
+        font-size: 0.9rem;
+        line-height: 1.5;
+        border: 2px solid #e2e8f0;
+    }
+
+    @media (max-width: 768px) {
+        nav ul {
+            flex-wrap: wrap;
+            gap: 1rem;
+        }
+
+        .dashboard-container {
+            margin: 0 20px;
+            padding: 5rem 1.5rem 1.5rem;
+        }
+
+        h1 {
+            font-size: 2rem;
+        }
+
+        .edit-form {
+            padding: 1.5rem;
+        }
+    }
+</style>
 </head>
 <body>
   <nav>
